2011-01-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to retrieve values from node attributes in XML data, resolves #12004
	* Corrected import process to abort it when import data type is not defined, resolves #12001
	* Added support for XPath queries relative to selected nodes in XML data, resolves #12027

2010-12-13  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for rich-text fields, resolves #11344
	* Added support for exceptions thrown by connectors, resolves #11159

2010-11-29  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected wrong extension key in suggestion list (thanks to Fabien Udriot)
	* Corrected some wrong initializations in external_import configuration display (BE module)

2010-10-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0

2010-10-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for additional where clause in foreign mappings, resolves #9277

2010-09-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed usage of deprecated method

2010-06-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected bug in records order when import table uses sortby field

2010-04-27  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added callback of connector for post-process operations
	* Added dependency on svconnector version 1.1.0 or above

2010-03-26  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Raised status to stable
	* Released to TER as version 1.0.0

2010-03-22  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added option to configure number of records in debug ouput (to be also used in preview)
	* Updated the manual

2010-02-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added full handling of user rights in BE module
	* Added preemptive handling of user rights in importer script
	* Fixed a bug with a missing initialization in foreign mappings

2010-02-03  Francois Suter (Cobweb)  <typo3@cobweb.ch>
